scss/NewsDev.scss
.NewsDev {
    min-height: 600px;
    *,
    *::before,
    *::after {
        margin: 0;
        padding: 0;
        box-sizing: border-box;
    }

    .timeline {
        ul {
            li {
                list-style-type: none;
                position: relative;
                width: 6px;
                margin: 0 auto;
                padding-top: 50px;
                background: $second-color;
                cursor: pointer;
                &::after {
                    content: '';
                    position: absolute;
                    left: 50%;
                    bottom: 0;
                    transform: translateX(-50%) rotate(45deg);
                    width: 20px;
                    height: 20px;
                    z-index: 5;
                    background: $main-color;
                }
                div {
                    position: relative;
                    bottom: 0;
                    width: 400px;
                    padding: 20px;
                    background: #fff;
                    display: flex;
                    align-items: center;
                    time {
                        position: absolute;
                        background: $main-color;
                        color: white;
                        padding: 5px;
                        top: -20px;
                        display: flex;
                        justify-content: center;
                        align-items: center;
                        letter-spacing: 2px;
                        text-shadow: black 0.5px 0.5px;
                    }
                    div {
                        height: 100px;
                        display: flex;
                        flex-direction: column;
                        justify-content: center;
                        align-items: center;
                        p {
                            text-align: center;
                        }
                    }
                    .discovery {
                        margin-right: 10px;
                    }
                }
                .card-news-content {
                    background-color: rgba(0, 0, 0, 0.4);
                    box-shadow: 5px 5px 5px $main-color;
                }
                &:nth-of-type(odd) {
                    > div {
                        left: 45px;
                    }
                }
                &:nth-of-type(even) {
                    > div {
                        left: -439px;
                    }
                }
            }
        }
    }

    // ANIMATION
    .timeline {
        overflow: hidden;
        ul {
            li {
                div {
                    visibility: hidden;
                    opacity: 0;
                    transition: all 0.5s ease-in-out;
                }
                &:nth-of-type(odd) {
                    div {
                    transform: translate3d(100px, -10px, 0) rotate(10deg);
                    }
                }
                &:nth-of-type(even) {
                    div {
                    transform: translate3d(-100px, -10px, 0) rotate(10deg);
                    }
                }
                &.in-view {
                    div {
                    transform: none;
                    visibility: visible;
                    opacity: 1;
                    }
                }
            }
        }
    }

    @media screen and (max-width: 900px) {
        .timeline {
            ul {
                li {
                    div {
                        width: 250px;
                        flex-direction: column;
                        div {
                            width: 80%;
                            margin: 10px;
                        }
                    }
                    &:nth-of-type(even) {
                        > div {
                            left: -289px;
                        }
                    }
                }
            }
        }
    }

    @media screen and (max-width: 600px) {
        .timeline {
            ul {
                li {
                    margin-left: 20px;
                    div {
                        width: calc(100vw - 91px);
                    }
                    &:nth-of-type(even) {
                        > div {
                            left: 45px;
                        }
                    }
                }
            }
        }
    }
}

